# PerlerBeadPatternGenerator

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
releases/: perlerbead-release.apk.idsig
releases/1.2.1/: perlerbead-release.apk.idsig
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BeadGridCanvas.tsx  CleanupDialog.tsx  ColorPicker.tsx  ColorStats.tsx  Header.tsx  ImageCropper.tsx  Sidebar.tsx  ZoomFab.tsx
src/components/ui/ClickSpark/: ClickSpark.tsx
src/components/ui/DotGrid/: DotGrid.css  DotGrid.tsx
src/components/ui/Magnet/: Magnet.tsx
src/components/ui/StarBorder/: StarBorder.css  StarBorder.tsx
src/hooks/: useDialogAnimation.ts  usePlatform.ts
src/types/: index.ts
src/utils/: colorMatcher.ts  colorPalette.ts  denoiseEngine.ts  exportManager.ts  imageProcessor.ts  pdfFont.ts  tauriAdapter.ts
